--- a/src/Core/Application/Application.csproj
+++ b/src/Core/Application/Application.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -15,10 +15,6 @@
   <ItemGroup>
     <ProjectReference Include="..\Domain\Domain.csproj" />
     <ProjectReference Include="..\Security\Security.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Features\Appointments\" />
   </ItemGroup>
 
 </Project>
