add changeStatus method

--- a/src/Presentation/WebApi/appsettings.json
+++ b/src/Presentation/WebApi/appsettings.json
@@ -5,5 +5,15 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "AppointmentConnectionString": "Server=.; Database=AppointmentDb;User Id=sa;Password=1; TrustServerCertificate=True;"
+  },
+  "TokenOptions": {
+    "AccessTokenExpiration": 10,
+    "Audience": "meral@meral.com",
+    "Issuer": "meral@meral.com",
+    "RefreshTokenTTL": 2,
+    "SecurityKey": "strongandsecretkeystrongandsecretkey"
+  }
 }
